@@ -114,9 +114,11 @@ Set the number of seconds to wait between retry attempts.
 Retrieve files with missing parts.
 .IP "-I/--complete"
 Retrieve only files with all parts.
+.IP "--decode"
+Decode and delete temp files (default)
 .IP "-k/--keep"
-Keep temp files.
-.IP "-K/--keep2"
+Decode and keep temp files.
+.IP "-K/--no-decode"
 Keep temp files, and don't try to decode them.
 .IP "-c/--case"
 Match case sensitively.
